@@ -81,21 +81,25 @@ module PageObject
         # platform method to handle a confirm popup
         # See PageObject#confirm
         #
-        def confirm(response, &block)
+        def confirm(response, frame=nil, &block)
+          switch_to_frame(frame)
           @browser.execute_script "window.confirm = function(msg) { window.__lastWatirConfirm = msg; return #{!!response} }"
           yield
-          @browser.execute_script "return window.__lastWatirConfirm"
+          value = @browser.execute_script "return window.__lastWatirConfirm"
+          @browser.switch_to.default_content unless frame.nil?
+          value
         end
 
         #
         # platform method to handle a prompt popup
         # See PageObject#prompt
         #
-        def prompt(answer, &block)
+        def prompt(answer, frame=nil, &block)
+          switch_to_frame(frame)
           @browser.execute_script "window.prompt = function(text, value) { window.__lastWatirPrompt = { message: text, default_value: value }; return #{answer.to_json}; }"
           yield
           result = @browser.execute_script "return window.__lastWatirPrompt"
-
+          @browser.switch_to.default_content unless frame.nil?
           result && result.dup.each_key { |k| result[k.to_sym] = result.delete(k) }
           result
         end
